--- a/MediatoRSourceGenerator/MediatoRSourceGenerator/MediatoRSourceGenerator.csproj
+++ b/MediatoRSourceGenerator/MediatoRSourceGenerator/MediatoRSourceGenerator.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Microsoft.Extensions.Configuration" />
     <None Remove="Microsoft.Extensions.Configuration.Json" />
+    <None Remove="Humanizer.Core" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
@@ -17,8 +18,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\SkateMall\src\CM\Library\CM.Library.csproj" />
