--- a/MediatoRSourceGenerator/MediatoRSourceGenerator/MediatoRSourceGenerator.csproj
+++ b/MediatoRSourceGenerator/MediatoRSourceGenerator/MediatoRSourceGenerator.csproj
@@ -11,6 +11,8 @@
     <None Remove="Microsoft.Extensions.Configuration" />
     <None Remove="Microsoft.Extensions.Configuration.Json" />
     <None Remove="Humanizer.Core" />
+    <None Remove="Microsoft.CodeAnalysis.CSharp" />
+    <None Remove="System.Runtime.Loader" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
@@ -21,6 +23,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\SkateMall\src\CM\Library\CM.Library.csproj" />
